@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.monarchinitiative.clintlr</groupId>
         <artifactId>clintlr</artifactId>
-        <version>0.3.1</version>
+        <version>1.0.0</version>
     </parent>
 
     <name>clintlr-core</name>
@@ -21,17 +21,14 @@
             <artifactId>phenol-io</artifactId>
         </dependency>
         <dependency>
-            <!--            <groupId>com.github.TheJacksonLaboratory.LIRICAL</groupId>-->
             <groupId>org.monarchinitiative.lirical</groupId>
             <artifactId>lirical-core</artifactId>
         </dependency>
         <dependency>
-            <!--            <groupId>com.github.TheJacksonLaboratory.LIRICAL</groupId>-->
             <groupId>org.monarchinitiative.lirical</groupId>
             <artifactId>lirical-configuration</artifactId>
         </dependency>
         <dependency>
-            <!--            <groupId>com.github.TheJacksonLaboratory.LIRICAL</groupId>-->
             <groupId>org.monarchinitiative.lirical</groupId>
             <artifactId>lirical-io</artifactId>
         </dependency>
@@ -45,17 +42,5 @@
         </dependency>
 
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-reads com.fasterxml.jackson.datatype.guava=ALL-UNNAMED --add-reads org.monarchinitiative.phenol.io=ALL-UNNAMED</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
