@@ -5,7 +5,7 @@
     <parent>
         <artifactId>clintlr</artifactId>
         <groupId>org.monarchinitiative.clintlr</groupId>
-        <version>0.3.1</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -35,13 +35,10 @@
             <artifactId>phenol-annotations</artifactId>
         </dependency>
         <dependency>
-<!--            <groupId>com.github.TheJacksonLaboratory.LIRICAL</groupId>-->
             <groupId>org.monarchinitiative.lirical</groupId>
             <artifactId>lirical-core</artifactId>
-            <version>2.0.0-RC3-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <!--            <groupId>com.github.TheJacksonLaboratory.LIRICAL</groupId>-->
             <groupId>org.monarchinitiative.lirical</groupId>
             <artifactId>lirical-io</artifactId>
         </dependency>
@@ -76,20 +73,21 @@
     </dependencies>
 
     <build>
+        <finalName>clintlr-gui-${os.detected.name}-${project.parent.version}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
         </resources>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.7.0</version>
+            </extension>
+        </extensions>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-reads com.fasterxml.jackson.datatype.guava=ALL-UNNAMED --add-reads org.monarchinitiative.phenol.io=ALL-UNNAMED</argLine>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
